[package]
name = "RNA_world_simulator"
version = "0.1.0"
authors = ["rKamiura <biodokunuma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
rand = "0.7"
rand_distr = "0.2.2"
itertools = "0.9.0"
ode_solvers = "0.3.0"